# sales-ops-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
data/: lead_input_review_cleanup.json
docs/: review.md
scripts/: compare_docx_structure.py  dump_docx_runs.py  extract_docx_spec.py
skills/coding-standards/: python.md
skills/venv-management/: SKILL.md
src/: create_lead_input.py  smoke_test_docx.py  smoke_test_openai.py  smoke_test_output_resolution.py
src/primer_ops/: __init__.py  cli.py  config.py  excel_helpers.py  io_helpers.py  lead_input.py  openai_helpers.py  primer.py  progress.py  render_docx.py
tests/: test_docx_rendering.py  test_output_resolution.py  test_primer_headings.py
tests/integration/: test_openai_smoke.py
tests/unit/: test_docx_inline_runs.py  test_markdown_normalize.py
