[project]
name = "codex-playground"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "python-dotenv",
    "openpyxl",
    "jinja2",
    "pydantic",
    "python-docx",
    "python-pptx",
    "markdown-it-py",
    "mdit-py-plugins",
    "pillow",
]

[dependency-groups]
dev = [
    "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
